# cnovel

./: .gitignore  CMakeLists.txt  README.md  cnovel
codeblocks/: run.sh
game/: config.cfg  game.cnovel
include/: config.h  def.h  engine.h  error.h  input.h  log.h  menu.h  parse.h  save.h  sound.h  strutils.h  utils.h  window.h
src/: config.c  engine.c  error.c  input.c  log.c  main.c  menu.c  parse.c  save.c  sound.c  strutils.c  utils.c  window.c
